--- a/app/views/course/not-running.html
+++ b/app/views/course/not-running.html
@@ -51,7 +51,7 @@
 
   <!-- <div class="govuk-grid-row add-top-margin">
     <div class="govuk-grid-column-two-thirds">
-      <h3 class="course-part-task">Training locations</h3>
+      <h3 class="course-part-task">Locations</h3>
 
       <div style="clear: left; padding-top: 20px">
       {% for school in course.schools %}
