--- a/app/views/organisation/index.html
+++ b/app/views/organisation/index.html
@@ -80,7 +80,7 @@
       {% endif %}
 
       <h2 class="govuk-heading-m">
-        <a href="/locations">Training locations</a>
+        <a href="/locations">Locations</a>
       </h2>
 
       <p>Use this section to:</p>
