--- a/app/views/course/vacancies-locations.html
+++ b/app/views/course/vacancies-locations.html
@@ -39,7 +39,7 @@
           <table class="govuk-table">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                <th class="govuk-table__header" scope="col">Training location</th>
+                <th class="govuk-table__header" scope="col">Location</th>
                 <th class="govuk-table__header" scope="col">Vacancies</th>
               </tr>
             </thead>
