--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "Training locations" %}
+{% set title = "Locations" %}
 
 {% block pageNavigation %}
   {{ govukBreadcrumbs({
