Update course tab label

--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -712,7 +712,7 @@
           html: descriptionHtml
         }
       }, {
-        label: "Basic details<br /><span style=\"pointer-events: none\" class=\"govuk-body-s govuk-!-font-weight-regular\">Subject, outcome, locations and key dates</span>" | safe,
+        label: "Basic details<br /><span style=\"pointer-events: none\" class=\"govuk-body-s govuk-!-font-weight-regular\">Locations, outcome and subject</span>" | safe,
         id: "information",
         panel: {
           html: informationHtml
